--- a/Mocha beasr/Mochabear3.html
+++ b/Mocha beasr/Mochabear3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" />
 
-    <title>I love you</title>
+    <title>❤️I LOVE YOU SO MUCH❤️</title>
   </head>
 </html>
 
@@ -12,7 +12,11 @@
   <div class="article">
     <header class="centerplease">
       <h1>❤️❤️❤️YIPPPPPPPIEEEEEEEEEEEEE❤️❤️❤️</h1>
-      <img src="img/catkiss.gif" alt="mochabear" width="500" height="400" />
+      <a href="Mochabear1.html">
+        <button class="Home">
+          <img src="img/catkiss.gif" alt="mochabear" width="500" height="400" />
+        </button>
+      </a>
     </header>
   </div>
 </body>
